Revision history for FFI-Raw

{{$NEXT}}

 - Make types constants inlineable by perl (GH#2) (thanks, DOLMEN!)
 - Add a proper Changes file (GH#3)

0.12      2012-08-20 11:34:16 Europe/Rome

 - Rebuild to update META.* repository links (no functional changes)

0.11      2012-08-14 12:07:18 Europe/Rome

 - Rebuild to remove internal test module from prereqs (no functional changes)

0.10      2012-08-14 11:40:47 Europe/Rome

 - Documentation fixes (no functional changes)
 - Code clean-up (no functional changes)

0.09      2012-07-19 09:36:28 Europe/Rome

 - Documentation fixes (no functional changes)
 - Remove experimental code notice (no functional changes)

0.08      2012-07-07 12:54:34 Europe/Rome

 - Rebuild to update META.* repository links (no functional changes)

0.07      2012-05-31 13:36:58 Europe/Rome

 - Make xt test suite the default (no functional changes)

0.06      2012-05-15 17:33:49 Europe/Rome

 - Add support for Perl callbacks
 - Add short and ushort types
 - Add experimental xt test suite
 - Fix libc path in tests (no functional changes)
 - Documentation fixes (no functional changes)

0.05      2012-05-09 11:32:43 Europe/Rome

 - Documentation fixes (no functional changes)
 - Add libuuid example
 - Add new_from_ptr() and ptr_to_str() subs
 - Use XS functions directly
 - Check for NULL library handle before closing it

0.04      2012-04-28 14:04:54 Europe/Rome

 - Fix libc test on Windows (no functional changes)
 - Fix FFI::Raw::MemPtr docs (no functional changes)

0.03      2012-04-26 16:35:05 Europe/Rome

 - Documentation improvements (no functional changes)
 - Add zeromq examples
 - Update malloc.pl example
 - Add FFI::Raw::MemPtr type and memptr() sub
 - Use perl's memory allocation macros

0.02      2012-04-19 15:12:42 Europe/Rome

 - Unload libraries on DESTROY
 - Fix argc check
 - Use a typemap
 - Check number of arguments in call()
 - Add uint and uchar types
 - Documentation fixes (no functional changes)
